--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=d, initial-scale=1.0">
-    <title>Motherfucking Website</title>
+    <title>Better Motherfucking Website</title>
 </head>
 <body>
     <h1><b> This is a motherfucking website.</b></h1>
